--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@stripe/stripe-js": "^1.19.0",
     "axios": "^0.22.0",
+    "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "next": "11.1.2",
     "react": "17.0.2",
